# number_plate_recognition_web

./: .dockerignore  .gitignore  Dockerfile  README.md  api.md  dune-project  install-deps.sh  interface.md  note.md  number_plate_recognition.opam  open.sh  start-backend.sh  start-docker.sh  watch-backend.sh  watch-frontend.sh
backend/: aes.ml  aes.mli  all.ml  backend.ml  db.ml  db.mli  dune  image.ml  login.ml  plates.ml  respond_error.ml  respond_error.mli
backend/handlers/: image.ml  image.mli  login.mli
frontend/: app.ml  dune  effect_lwt.ml  frontend.ml  get_plates.ml  http.ml  index.html  login.ml  table.ml
lib/: dune
shared/: dune  shared.ml
test/: dune
